<resources>
    <string name="app_name" translatable="false">Chesva</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="service">Service</string>
    <string name="operations">Operations</string>
    <string name="action_rate">Rate</string>
    <string name="action_close">Close</string>
    <string name="questions_exit">Are you sure you want to quit?</string>
    <string name="questions_save_changes">Save changes?</string>
    <string name="questions_select_element">Choose an item?</string>
    <string name="questions_title_info">Info</string>
    <string name="questions_answer_yes">Yes</string>
    <string name="questions_answer_save">Save</string>
    <string name="questions_answer_no">No</string>
    <string name="questions_answer_agree">Ok</string>
    <string name="questions_answer_continue">Continue</string>
    <string name="questions_answer_cancel">Cancel</string>
    <string name="questions_answer_ok">Ok</string>
    <string name="questions_title_question">Question</string>
    <string name="questions_title_error">Error</string>
    <string name="questions_title_successful">Successfully</string>
    <string name="questions_select_from_list">Select from the list</string>
    <string name="questions_save_changes_settings">Save changes to settings?</string>
    <string name="questions_rate">Don\'t want to rate the app?</string>
    <string name="questions_answer_late">Later</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error_password">Invalid password</string>
    <string name="attention">Warning</string>
    <string name="reports_by_period">For period</string>
    <string name="date_start">Date from</string>
    <string name="date_end">Date after</string>
    <string name="time">time</string>
    <string name="questions_choose_time">Choose a time</string>
    <string name="compare_period_error">Period is incorrect</string>
    <string name="new_version_app">A new version of the application has appeared. Update?</string>
    <string name="double_press_exit">Please click BACK again to close the app</string>
    <string name="download">Download data</string>
    <string name="upload">Upload data</string>
    <string name="inventory">Inventory</string>
    <string name="license">License</string>
    <string name="license_period_end">License period has expired</string>
    <string name="questions_answer_exit">Exit</string>
    <string name="questions_answer_license_activate">Activation</string>
    <string name="license_activate_operation">To activate, you must upload a non-activated file and download the activated file</string>
    <string name="questions_answer_license_load_file">Download</string>
    <string name="questions_answer_license_upload_file">Upload</string>
    <string name="save_license_file">Save activation file</string>
    <string name="license_file_name" translatable="false">inventory_activation</string>
    <string name="error_read_file">Error reading file</string>
    <string name="file_license_create">File uploaded</string>
    <string name="error_file_license_create">Error uploading file</string>
    <string name="license_device_error">License does not apply to this device</string>
    <string name="license_activated">License successfully activated</string>
    <string name="license_available">License available for</string>
    <string name="action_geiger" translatable="false">Geiger</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="rfid_load_failed">Error init scanner</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="autorization">Authorization</string>
    <string name="main_menu">Main menu</string>
    <string name="loading">Data downloading</string>
    <string name="up_loading">Uploading data</string>
    <string name="error_file">File not found or damaged</string>
    <string name="error_read">Read error</string>
    <string name="load_state">Current status</string>
    <string name="download_wifi">Download by WiFi</string>
    <string name="cancel">Cancel</string>
    <string name="download_file">Download from file</string>
    <string name="upload_wifi">Upload by WiFi</string>
    <string name="upload_file">Upload to file</string>
    <string name="clearing_previous_data">Deleting previous data</string>
    <string name="opening_file">Open file</string>
    <string name="load_done">Done</string>
    <string name="downloaded">Downloaded</string>
    <string name="from">from</string>
    <string name="question_data_base_no_empty">Database is not empty</string>
    <string name="saving_to_db">Saving to base</string>
    <string name="canceled">Canceled</string>
    <string name="get_data_from_db">Retrieving data from the database</string>
    <string name="write_to_table">Writing to a table</string>
    <string name="error_download">Downloading error</string>
    <string name="error_upload">Uploading error</string>
    <string name="writing_file">Write to file</string>
    <string name="error_write_file">Error writing to file</string>
    <string name="start_cancel">Cancellation in progress</string>
    <string name="question_previous_data_will_be_clean">Database is not empty. Previous data will be deleted.</string>
    <string name="wait_end_procces_inventory">Wait for the end of processing labels</string>
    <string name="wait_end_procces_scan">Not available when scanning</string>
    <string name="geiger_txt_rssi" translatable="false">RSSI</string>
    <string name="wifi_connection">WIFI connection</string>
    <string name="s_USBConnection">USB connection</string>
    <string name="confirmed">Confirmed</string>
    <string name="start">Start</string>
    <string name="stop">"Stop "</string>
    <string name="search_command">Search</string>
    <string name="clear_command">Clear</string>
    <string name="save_command">Save</string>
    <string name="rfid_command">RFID tag reading</string>
    <string name="enter_label_name">Enter the tag number</string>
    <string name="enter_hint_name">Enter name of the object</string>
    <string name="barcode_name">Barcode</string>
    <string name="serial_number">Serial number</string>
    <string name="inventory_number">Inventory number</string>
    <string name="enter_hint_inventory_number">Enter inventory number</string>
    <string name="enter_hint_serial_number">Enter serial number</string>
    <string name="start_stop">Start/Stop</string>
    <string name="create">Create</string>
    <string name="in_search_of">In search</string>
    <string name="found">Found</string>
    <string name="excessive">Excess</string>
    <string name="mMissing">Error</string>
    <string name="in_search">Search</string>
    <string name="in_created">Created</string>
    <string name="add">Add</string>
    <string name="rfid" translatable="false">RFID</string>
    <string name="error">Error</string>
    <string name="start_rfid">Start RFID</string>
    <string name="stop_rfid">Stop RFID</string>
    <string name="saved">Saved</string>
    <string name="not_saved">Write error</string>
    <string name="loading_title">Processing. Wait...</string>
    <string name="rfid_added_to_facility">RFID tag attached to</string>
    <string name="inventory_number_added_to_facility">This inventory number is already assigned to</string>
    <string name="saved_changes_to_facility">Save changes by MA</string>
    <string name="create_new_facility">Save new MA</string>
    <string name="please_login">Please login</string>
    <string name="sign_in">Sign in</string>
    <string name="rfid_power_name">Antenna power selection,%</string>
    <string name="rfid_power_name_short">Antenna power,%</string>
    <string name="server">Server</string>
    <string name="complete">Done</string>
    <string name="save_pass">Remember password</string>
    <string name="error_internet_connecting">No internet connection!</string>
    <string name="email">Email</string>
    <string name="error_field_required">These data are required</string>
    <string name="error_sync">Synchronization error</string>
    <string name="invalid_login">Invalid login or password</string>
    <string name="work_with_instrument">Working with the tool</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Unloading</string>
    <string name="boxes">boxes</string>
    <string name="main_assets">tools</string>
    <string name="coditions">states</string>
    <string name="persons">employees</string>
    <string name="person">Employee</string>
    <string name="box_add_rfid_operation">Attach RFID tag to the box</string>
    <string name="box_add_rfid_title">Binding label to box</string>
    <string name="main_asset_add_rfid_operation">Attach RFID tag to the tool</string>
    <string name="main_asset_add_rfid_title">Binding label to the tool</string>
    <string name="assemble_box_operation">Assemble box</string>
    <string name="assemble_box_title">Box assembly</string>
    <string name="main_asset_issuing_operation">Issuing tool</string>
    <string name="main_asset_returning_operation">Returning tool</string>
    <string name="main_asset_searching_operation">Tool search</string>
    <string name="all_list">Total</string>
    <string name="with_rfid">With label</string>
    <string name="without_rfid">Without label</string>
    <string name="box">Box</string>
    <string name="connecting_scanner">Scanner connection</string>
    <string name="model">Model</string>
    <string name="name">Name</string>
    <string name="contition">State</string>
    <string name="find_person">Scan employee card</string>
    <string name="find_main_asset">Scan tool label</string>
    <string name="issued_name">Issued</string>
    <string name="returned_name">Returned</string>
    <string name="stop_scan">Stop scaning</string>
    <string name="find_box">Scan box label</string>
    <string name="added_name">Added</string>
    <string name="person_by_rfid_not_found">No employee found for this card</string>
    <string name="main_asset_by_rfid_not_found">No tool found for this label</string>
    <string name="box_by_rfid_not_found">No box found for this label</string>
    <string name="this_main_asset_issued">already issued</string>
    <string name="this_person">this employee</string>
    <string name="main_asset">Tool</string>
    <string name="this_main_asset_returned">already returned</string>
    <string name="this_person_1">this employee</string>
    <string name="main_asset_not_have_rfid">No label specified for instrument</string>
    <string name="main_asset_search_bad_rfid">Search for a tool with the specified mark is not possible</string>
    <string name="boxes_add_rfid">bindings of labels to boxes</string>
    <string name="main_assets_add_rfid">bindings of labels to tools</string>
    <string name="main_assets_in_box">placement of tools in boxes</string>
    <string name="main_asset_issuing">tools issuing</string>
    <string name="main_asset_returning">tool returns</string>
    <string name="founded_more_one">More than one found, refine your search</string>
    <string name="tool_not_found">Tool not found</string>
    <string name="e0000">Delete error. You cannot delete a non-empty group.</string>
    <string name="e0001">Change error. The object has been deleted.</string>
    <string name="e0002">Label change error. The box has been deleted.</string>
    <string name="e0003">Label change error Box not found</string>
    <string name="e0004">Operation completed successfully</string>
    <string name="e0005">Operation completed with error</string>
    <string name="e0006">Location not found</string>
    <string name="e0007">An object with the same name already exists.</string>
    <string name="e0008">Person not found</string>
</resources>