<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/basic_margin_left_list_selection"
        android:layout_marginRight="@dimen/basic_margin_left_list_selection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnMainDownloadFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download"
            style="@style/ButtonClick"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnMainInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/work_with_instrument"
            style="@style/ButtonClick"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnMainUploadFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/upload"
            style="@style/ButtonClick"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>