<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_rhombus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_settings_white"
            tools:ignore="VectorDrawableCompat" />

    </FrameLayout>

    <Spinner
        android:id="@+id/sLanguage"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:background="@drawable/blue_outline"
        android:popupBackground="@drawable/shape_list_language"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/item_language"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@+id/settings"
        app:layout_constraintBottom_toBottomOf="@+id/settings"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/icon_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shape_lock" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/app_name"
        style="@style/TextStyle_App_Name"
        app:layout_constraintTop_toBottomOf="@+id/icon_lock"/>

    <TextView
        android:id="@+id/text_please_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/please_login"
        style="@style/TextStyle_Standart_Grey"
        app:layout_constraintTop_toBottomOf="@+id/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/TextSizeInputLayoutLabel"
        app:layout_constraintTop_toBottomOf="@+id/text_please_login">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_middle"
            android:fontFamily="@string/font_family_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_password_toggle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/TextSizeInputLayoutLabel"
        app:layout_constraintTop_toBottomOf="@+id/login_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_middle"
            android:fontFamily="@string/font_family_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_save_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:text="@string/save_pass"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/cb_save_pass"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>